@@ -111,68 +111,73 @@ for r in results:
 
 # select genes with GO Associations of evidence RCA only
 
-db.sql('select m._Marker_key, m.symbol, m.name, mgiID = a.accID, a.numericPart ' + \
-	'into #markers ' + \
-	'from MRK_Marker m, ACC_Accession a ' + \
-	'where m._Marker_Type_key = 1 ' + \
-	'and m._Marker_Status_key in (1,3) ' + \
-	'and m.symbol not like "[A-Z][0-9][0-9][0-9][0-9][0-9]" ' + \
-	'and m.symbol not like "[A-Z][A-Z][0-9][0-9][0-9][0-9][0-9][0-9]" ' + \
-	'and m._Marker_key = a._Object_key ' + \
-	'and a._MGIType_key = 2 ' + \
-	'and a._LogicalDB_key = 1 ' + \
-	'and a.prefixPart = "MGI:" ' + \
-	'and a.preferred = 1 ' + \
-	'and exists (select 1 from  VOC_Annot a, VOC_Evidence e ' + \
-	'where m._Marker_key = a._Object_key ' + \
-	'and a._AnnotType_key = 1000 ' + \
-	'and a._Annot_key = e._Annot_key ' + \
-	'and e._EvidenceTerm_key = 514597) ' + \
-	'and not exists (select 1 from  VOC_Annot a, VOC_Evidence e ' + \
-	'where m._Marker_key = a._Object_key ' + \
-	'and a._AnnotType_key = 1000 ' + \
-	'and a._Annot_key = e._Annot_key ' + \
-	'and e._EvidenceTerm_key != 514597) ', None)
+db.sql('''select m._Marker_key, m.symbol, m.name, a.accID as mgiID, a.numericPart 
+	into #markers 
+	from MRK_Marker m, ACC_Accession a 
+	where m._Marker_Type_key = 1 
+	and m._Marker_Status_key in (1,3) 
+	and m.symbol !~ '[A-Z][0-9][0-9][0-9][0-9][0-9]' 
+	and m.symbol !~ '[A-Z][A-Z][0-9][0-9][0-9][0-9][0-9][0-9]' 
+	and m._Marker_key = a._Object_key 
+	and a._MGIType_key = 2 
+	and a._LogicalDB_key = 1 
+	and a.prefixPart = 'MGI:' 
+	and a.preferred = 1 
+	and exists (select 1 from  VOC_Annot a, VOC_Evidence e 
+	where m._Marker_key = a._Object_key 
+	and a._AnnotType_key = 1000 
+	and a._Annot_key = e._Annot_key 
+	and e._EvidenceTerm_key = 514597) 
+	and not exists (select 1 from  VOC_Annot a, VOC_Evidence e 
+	where m._Marker_key = a._Object_key 
+	and a._AnnotType_key = 1000 
+	and a._Annot_key = e._Annot_key 
+	and e._EvidenceTerm_key != 514597) 
+	''', None)
 
 db.sql('create index markers_idx1 on #markers(_Marker_key)', None)
 
-db.sql('select distinct m.*, r._Refs_key, r.pubmedID ' + \
-	'into #references1 ' + \
-	'from #markers m , MRK_Reference r ' + \
-	'where m._Marker_key = r._Marker_key ', None)
+db.sql('''select distinct m.*, r._Refs_key, r.pubmedID
+	into #references1 
+	from #markers m , MRK_Reference r 
+	where m._Marker_key = r._Marker_key 
+	''', None)
 
 db.sql('create index index_refs1_key on #references1(_Refs_key)', None)
 
-db.sql('select r.*, b.jnum, b.jnumID, b.short_citation ' + \
-	'into #references2 ' + \
-	'from #references1 r, BIB_All_View b ' + \
-	'where r._Refs_key = b._Refs_key', None)
+db.sql('''select r.*, b.jnum, b.jnumID, b.short_citation 
+	into #references2 
+	from #references1 r, BIB_All_View b 
+	where r._Refs_key = b._Refs_key
+	''', None)
 
 db.sql('create index index_refs_key on #references2(_Refs_key)', None)
 
 # has reference been chosen for GXD
-results = db.sql('select distinct r._Refs_key ' + \
-	'from #references2 r, BIB_DataSet_Assoc ba, BIB_DataSet bd ' + \
-	'where r._Refs_key = ba._Refs_key ' + \
-	'and ba._DataSet_key = bd._DataSet_key ' + \
-	'and bd.dataSet = "Expression" ' + \
-	'and ba.isNeverUsed = 0', 'auto')
+results = db.sql('''select distinct r._Refs_key 
+	from #references2 r, BIB_DataSet_Assoc ba, BIB_DataSet bd 
+	where r._Refs_key = ba._Refs_key 
+	and ba._DataSet_key = bd._DataSet_key 
+	and bd.dataSet = 'Expression' 
+	and ba.isNeverUsed = 0
+	''', 'auto')
 gxd = []
 for r in results:
 	gxd.append(r['_Refs_key'])
 
-db.sql('select distinct r._Marker_key, r._Refs_key, r.symbol, r.name, r.mgiID, ' + \
-	'r.jnumID, r.jnum, r.numericPart, r.pubmedID ' + \
-	'into #fpA ' + \
-	'from #references2 r, BIB_DataSet_Assoc ba, BIB_DataSet bd ' + \
-	'where r._Refs_key = ba._Refs_key ' + \
-	'and ba._DataSet_key = bd._DataSet_key ' + \
-	'and bd.dataSet = "Gene Ontology" ' + \
-	'and ba.isNeverUsed = 0 ' + \
-	'and not exists (select 1 from VOC_Evidence e, VOC_Annot a ' + \
-	'where r._Refs_key = e._Refs_key ' + \
-	'and e._Annot_key = a._Annot_key ' + \
-	'and a._AnnotType_key = 1000)', None)
+db.sql('''select distinct r._Marker_key, r._Refs_key, r.symbol, r.name, r.mgiID, 
+	r.jnumID, r.jnum, r.numericPart, r.pubmedID 
+	into #fpA 
+	from #references2 r, BIB_DataSet_Assoc ba, BIB_DataSet bd 
+	where r._Refs_key = ba._Refs_key 
+	and ba._DataSet_key = bd._DataSet_key 
+	and bd.dataSet = 'Gene Ontology' 
+	and ba.isNeverUsed = 0 
+	and not exists (select 1 from VOC_Evidence e, VOC_Annot a 
+	where r._Refs_key = e._Refs_key 
+	and e._Annot_key = a._Annot_key 
+	and a._AnnotType_key = 1000)
+	''', None)
 
 # number of unique MGI gene
 results = db.sql('select distinct _Marker_key from #fpA', 'auto')
